add api key auth

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -54,3 +54,9 @@ caching:
   enabled: true
   ttl: 300  # Время жизни кэша в секундах
   max_size: 1000  # Максимальное количество элементов в кэше
+
+# Настройки безопасности
+security:
+  enabled: true  # Включить/выключить аутентификацию по API ключу
+  api_key: null  # API ключ для аутентификации (если null, аутентификация отключена)
+  api_key_header: "X-API-Key"  # Название заголовка для API ключа
