add Nexus client for download model weight

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -60,3 +60,17 @@ security:
   enabled: true  # Включить/выключить аутентификацию по API ключу
   api_key: null  # API ключ для аутентификации (если null, аутентификация отключена)
   api_key_header: "X-API-Key"  # Название заголовка для API ключа
+
+# Настройки Nexus
+nexus:
+  enabled: false  # Включить/выключить загрузку моделей из Nexus
+  url: ""  # URL сервера Nexus
+  repo: ""  # Название репозитория
+  name: ""  # Название артефакта
+  id: ""  # ID артефакта
+  version: ""  # Версия артефакта
+  file_name: ""  # Имя файла артефакта
+  # Параметры аутентификации (могут быть заданы через переменные окружения: NEXUS_LOGIN, NEXUS_PASSWORD, NEXUS_CERT_PATH)
+  login: null  # Логин для аутентификации в Nexus (опционально)
+  password: null  # Пароль для аутентификации в Nexus (опционально)
+  cert_path: null  # Путь к сертификату для SSL аутентификации (опционально)
