add env option for api-key

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -65,7 +65,7 @@ caching:
 # Настройки безопасности
 security:
   enabled: true  # Включить/выключить аутентификацию по API ключу
-  api_key: null  # API ключ для аутентификации (если null, аутентификация отключена)
+  api_key: null  # API ключ для аутентификации (если null, аутентификация отключена). Может быть задан через переменную окружения API_KEY
   api_key_header: "X-API-Key"  # Название заголовка для API ключа
 
 # Настройки Nexus
